--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "i18next": "^25.5.2",
     "next": "13.5.7",
     "next-themes": "^0.4.6",
+    "pdf-parse": "^2.4.5",
     "postcss": "8.4.21",
     "react": "18.2.0",
     "react-dom": "18.2.0",
