--- a/content/data/featuredProjects.json
+++ b/content/data/featuredProjects.json
@@ -6,7 +6,18 @@
       "title": "Vivieli Terapia",
       "titleKey": "projects.projectNumber",
       "descriptionKey": "home.projects.project1",
-      "techs": ["HTML", "CSS", "JavaScript", "Netlify"],
+      "techs": [
+        "Next.js 14",
+        "React 18",
+        "Tailwind CSS",
+        "next-themes",
+        "react-icons",
+        "gray-matter",
+        "remark",
+        "date-fns",
+        "Netlify",
+        "Vercel"
+      ],
       "featured": true,
       "link": "https://vivieliterapia.netlify.app",
       "screenshotUrl": "https://s.wordpress.com/mshots/v1/https%3A%2F%2Fvivieliterapia.netlify.app?w=800"
